--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,27 @@ services:
   db:
     image: mysql:8.0
     container_name: epicuria-mysql
-    restart: unless-stopped
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: epicuria
+      MYSQL_USER: epicuria_user
+      MYSQL_PASSWORD: epicuria_password
     ports:
       - "3306:3306"
     volumes:
       - epicuria_mysql_data:/var/lib/mysql
+      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: epicuria-phpmyadmin
-    restart: unless-stopped
+    restart: always
     environment:
       PMA_HOST: db
       PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: root
     ports:
       - "8080:80"
     depends_on:
